# python-starter-template

./: LICENSE  README.md  core.py  pyproject.toml  test_core.py
